--- a/nodes/ndnode.yaml
+++ b/nodes/ndnode.yaml
@@ -31,349 +31,191 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
-- cipher: chacha20-ietf-poly1305
+- cipher: aes-256-cfb
   name: 6元高速机场：cczzuu.top
-  password: f8f7aCzcPKbsF8p3
-  port: 990
-  server: 64.74.163.130
+  password: UTJA57ypk2XKQpnm
+  port: 9033
+  server: 217.30.10.18
   type: ss
-- name: 🇺🇸_US_美国
-  network: ws
-  port: 80
-  server: 151.101.2.219
-  type: vless
-  uuid: f3b386af-1626-4fc0-dfb6-af6fe23bd31c
-  ws-opts:
-    headers:
-      host: XpnTeam.ir
-    path: '@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam?ed=2048'
-- cipher: chacha20-ietf-poly1305
-  name: 🇩🇪_DE_德国
-  password: cvII85TrW6n0OGyfpHVS1u
-  port: 8080
-  server: 45.87.175.181
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_1
-  password: kDWvXYZoTBcGkC4
-  port: 8881
-  server: 54.37.12.70
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_2
-  password: XKFKl2rULjIp74
-  port: 8008
-  server: 142.202.49.119
-  type: ss
-- name: 🇺🇦_UA_乌克兰
-  network: tls
-  port: 22161
-  server: 95.164.117.40
-  type: vless
-  uuid: 3aa78f08-e345-4d83-bda0-f34eebc5fcc8
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_3
-  password: g5MeD6Ft3CWlJId
-  port: 5004
-  server: 142.202.48.105
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_4
-  password: PCnnH6SQSnfoS27
-  port: 8090
-  server: 38.110.1.203
-  type: ss
-- cipher: chacha20-ietf-poly1305
-  name: 🇺🇸_US_美国_5
-  password: sn9wq4rWWo4rtvdZpedsZh
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国
+  password: amazonskr05
   port: 443
-  server: 51.158.252.130
+  server: 44.244.24.140
   type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_6
-  password: PCnnH6SQSnfoS27
-  port: 8091
-  server: 38.110.1.203
+- cipher: chacha20-ietf-poly1305
+  name: 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
+  password: 4a2rfixophdjffa8KVA4Aa
+  port: 8080
+  server: beesyar.org
   type: ss
 - alterId: 64
   cipher: auto
   name: 🇨🇳_CN_中国->🇺🇸_US_美国
   network: tcp
   port: 58831
-  server: 183.236.48.163
+  server: 120.232.153.27
   type: vmess
   uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-- name: 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  password: wkmY1R4EcP
-  port: 443
-  server: 65.20.115.19
-  skip-cert-verify: true
-  sni: myket.io
-  type: trojan
 - cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_7
-  password: FoOiGlkAA9yPEGP
-  port: 7306
-  server: 142.202.48.105
+  name: 🇺🇸_US_美国_2
+  password: PCnnH6SQSnfoS27
+  port: 8090
+  server: 54.37.12.70
   type: ss
-- name: 🇺🇸_US_美国_8
-  network: ws
-  port: 80
-  server: 104.18.29.244
-  type: vless
-  uuid: 5c75e010-a7f5-11ef-91f8-1239d0255272
-  ws-opts:
-    headers:
-      host: us1.socifiles.com
-    path: /vlws
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_9
-  password: amazonskr05
-  port: 443
-  server: 35.89.254.222
-  type: ss
-- name: 🇺🇸_US_美国_10
-  network: ws
-  port: 80
-  server: 104.18.28.244
-  type: vless
-  uuid: 5c75e010-a7f5-11ef-91f8-1239d0255272
-  ws-opts:
-    headers:
-      host: us1.socifiles.com
-    path: /vlws
-- name: 🇺🇸_US_美国_11
-  network: ws
-  port: 80
-  server: 151.101.130.219
-  type: vless
-  uuid: f3b386af-1626-4fc0-dfb6-af6fe23bd31c
-  ws-opts:
-    headers:
-      host: XpnTeam.ir
-    path: '@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam/@XpnTeam?ed=2048'
-- cipher: chacha20-ietf-poly1305
-  name: 🇺🇸_US_美国_12
-  password: 5cp9Z3iWnJZ2
-  port: 443
-  server: 205.134.180.150
+- alterId: 0
+  cipher: auto
+  fingerprint: ''
+  name: 🇷🇺_RU_俄罗斯_1
+  network: tcp
+  port: 8081
+  server: 194.87.31.160
+  skip-cert-verify: true
+  sni: ''
+  type: vmess
+  uuid: a7e00c2f-411a-438f-9119-0f022a85a5e3
+- cipher: aes-256-gcm
+  name: 🇺🇸_US_美国_3
+  password: e4FCWrgpkji3QY
+  port: 9102
+  server: 38.110.1.105
   type: ss
 - alterId: 64
   cipher: auto
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+  name: 🇺🇸_US_美国->🇨🇳_CN_中国
   network: tcp
-  port: 52112
-  server: 183.236.51.23
+  port: 45017
+  server: 142.0.134.244
   type: vmess
   uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
 - cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_13
-  password: Y6R9pAtvxxzmGC
-  port: 8888
-  server: 38.110.1.203
-  type: ss
-- name: 🇺🇸_US_美国_14
-  network: ws
-  port: 80
-  server: 151.101.66.228
-  type: vless
-  uuid: 6ac07096-da0a-454a-a8b0-c7dc54a9f163
-  ws-opts:
-    headers:
-      host: ujhf5r5gub.com
-    path: ws/?ed=2048
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_15
-  password: TEzjfAYq2IjtuoS
-  port: 6679
-  server: 142.202.49.119
-  type: ss
-- cipher: chacha20-ietf-poly1305
-  name: 🇩🇪_DE_德国_1
-  password: 4a2rfixophdjffa8KVA4Aa
-  port: 8080
-  server: 45.87.175.178
-  type: ss
-- name: 🇺🇸_US_美国_16
-  network: ws
-  password: WOeXShhJpL
-  port: 443
-  server: 104.18.71.140
-  sni: 09jzus.zdzdzd.xyz
-  type: trojan
-  udp: true
-  ws-opts:
-    headers:
-      host: 09jzus.zdzdzd.xyz
-    path: /juzigongyi
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  network: ws
-  port: 2095
-  server: skk.moe
-  skip-cert-verify: false
-  sni: c2.6016725.xyz
-  type: vmess
-  uuid: 18d96190-c10f-448f-a82a-2d36df5c3cde
-  ws-opts:
-    headers:
-      host: c2.6016725.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  network: ws
-  port: 2095
-  server: 23.227.38.3
-  sni: c2.6016725.xyz
-  type: vmess
-  uuid: 18d96190-c10f-448f-a82a-2d36df5c3cde
-  ws-opts:
-    headers:
-      host: c2.6016725.xyz
-    path: /github.com/Alvin9999
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_17
-  password: pKEW8JPByTVTLtM
-  port: 443
-  server: 142.202.49.119
-  type: ss
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  network: ws
-  port: 2095
-  server: 104.19.45.19
-  skip-cert-verify: false
-  sni: c2.6016725.xyz
-  type: vmess
-  uuid: 18d96190-c10f-448f-a82a-2d36df5c3cde
-  ws-opts:
-    headers:
-      host: c2.6016725.xyz
-    path: /github.com/Alvin9999
-- name: 🇺🇸_US_美国_18
-  network: ws
-  password: WOeXShhJpL
-  port: 443
-  server: 104.17.49.240
-  sni: 09jzus.zdzdzd.xyz
-  type: trojan
-  udp: true
-  ws-opts:
-    path: /juzigongyi
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_19
-  password: faBAoD54k87UJG7
-  port: 2375
-  server: 142.202.49.119
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_20
-  password: Y6R9pAtvxxzmGC
-  port: 3389
+  name: 🇺🇸_US_美国_4
+  password: g5MeD6Ft3CWlJId
+  port: 5003
   server: 142.202.48.105
   type: ss
 - cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_21
-  password: e4FCWrgpkji3QY
-  port: 9101
-  server: 142.202.49.119
+  name: 🇺🇸_US_美国_6
+  password: Y6R9pAtvxxzmGC
+  port: 9090
+  server: 38.110.1.105
+  type: ss
+- cipher: chacha20-ietf-poly1305
+  name: 🇩🇪_DE_德国->🇯🇵_JP_日本
+  password: 4a2rfixophdjffa8KVA4Aa
+  port: 8080
+  server: 45.87.175.154
+  type: ss
+- name: 🇫🇷_FR_法国->🇺🇸_US_美国
+  password: telegram-id-directvpn
+  port: 22222
+  server: 15.237.235.15
+  skip-cert-verify: false
+  sni: trojan.burgerip.co.uk
+  type: trojan
+- alpn:
+  - http/1.1
+  name: 🇺🇸_US_美国_8
+  network: tcp
+  password: telegram-id-privatevpns
+  port: 22222
+  server: 13.61.76.115
+  sni: trojan.burgerip.co.uk
+  type: trojan
+- cipher: chacha20-ietf-poly1305
+  name: 🇷🇺_RU_俄罗斯_2
+  password: 3MgIhqwp4pjM8SKwixNkYZ
+  port: 33068
+  server: 193.124.22.253
   type: ss
 - cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_22
-  password: FoOiGlkAA9yPEGP
-  port: 7306
+  name: 🇺🇸_US_美国_9
+  password: pKEW8JPByTVTLtM
+  port: 443
+  server: 38.110.1.105
+  type: ss
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_10
+  password: amazonskr05
+  port: 443
+  server: 35.94.117.219
+  type: ss
+- cipher: aes-256-gcm
+  name: 🇺🇸_US_美国_11
+  password: lGqs95QkFHo2NV
+  port: 5498
+  server: 38.110.1.105
+  type: ss
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_12
+  password: amazonskr05
+  port: 443
+  server: 35.91.205.11
+  type: ss
+- cipher: aes-256-gcm
+  name: 🇺🇸_US_美国_13
+  password: RexnBgU7EV5ADxG
+  port: 7001
   server: 38.110.1.203
   type: ss
-- name: 🇺🇸_US_美国_23
-  network: ws
-  password: WOeXShhJpL
-  port: 443
-  server: 172.67.67.64
-  sni: 09jzus.zdzdzd.xyz
+- alpn:
+  - http/1.1
+  name: 🇮🇪_IE_爱尔兰
+  network: tcp
+  password: telegram-id-privatevpns
+  port: 22222
+  server: 52.208.71.141
+  sni: trojan.burgerip.co.uk
   type: trojan
-  udp: true
-  ws-opts:
-    path: /juzigongyi
 proxy-groups:
 - name: 🚀 节点选择
   proxies:
   - ♻️ 自动选择
   - DIRECT
-  - 🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇦_UA_乌克兰
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
   - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇯🇵_JP_日本
+  - 🇫🇷_FR_法国->🇺🇸_US_美国
   - 🇺🇸_US_美国_8
+  - 🇷🇺_RU_俄罗斯_2
   - 🇺🇸_US_美国_9
   - 🇺🇸_US_美国_10
   - 🇺🇸_US_美国_11
   - 🇺🇸_US_美国_12
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_1
   - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
+  - 🇮🇪_IE_爱尔兰
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
-  - 🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇦_UA_乌克兰
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
   - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇯🇵_JP_日本
+  - 🇫🇷_FR_法国->🇺🇸_US_美国
   - 🇺🇸_US_美国_8
+  - 🇷🇺_RU_俄罗斯_2
   - 🇺🇸_US_美国_9
   - 🇺🇸_US_美国_10
   - 🇺🇸_US_美国_11
   - 🇺🇸_US_美国_12
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_1
   - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
+  - 🇮🇪_IE_爱尔兰
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -382,157 +224,101 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇦_UA_乌克兰
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
   - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇯🇵_JP_日本
+  - 🇫🇷_FR_法国->🇺🇸_US_美国
   - 🇺🇸_US_美国_8
+  - 🇷🇺_RU_俄罗斯_2
   - 🇺🇸_US_美国_9
   - 🇺🇸_US_美国_10
   - 🇺🇸_US_美国_11
   - 🇺🇸_US_美国_12
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_1
   - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
+  - 🇮🇪_IE_爱尔兰
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇦_UA_乌克兰
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
   - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇯🇵_JP_日本
+  - 🇫🇷_FR_法国->🇺🇸_US_美国
   - 🇺🇸_US_美国_8
+  - 🇷🇺_RU_俄罗斯_2
   - 🇺🇸_US_美国_9
   - 🇺🇸_US_美国_10
   - 🇺🇸_US_美国_11
   - 🇺🇸_US_美国_12
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_1
   - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
+  - 🇮🇪_IE_爱尔兰
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇦_UA_乌克兰
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
   - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇯🇵_JP_日本
+  - 🇫🇷_FR_法国->🇺🇸_US_美国
   - 🇺🇸_US_美国_8
+  - 🇷🇺_RU_俄罗斯_2
   - 🇺🇸_US_美国_9
   - 🇺🇸_US_美国_10
   - 🇺🇸_US_美国_11
   - 🇺🇸_US_美国_12
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_1
   - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
+  - 🇮🇪_IE_爱尔兰
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇦_UA_乌克兰
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
   - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇯🇵_JP_日本
+  - 🇫🇷_FR_法国->🇺🇸_US_美国
   - 🇺🇸_US_美国_8
+  - 🇷🇺_RU_俄罗斯_2
   - 🇺🇸_US_美国_9
   - 🇺🇸_US_美国_10
   - 🇺🇸_US_美国_11
   - 🇺🇸_US_美国_12
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_1
   - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
+  - 🇮🇪_IE_爱尔兰
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -555,40 +341,26 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
-  - 🇨🇦_CA_加拿大
+  - 🇷🇺_RU_俄罗斯
   - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国
-  - 🇺🇸_US_美国_1
-  - 🇺🇸_US_美国_2
-  - 🇺🇦_UA_乌克兰
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_5
-  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
   - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇸🇪_SE_瑞典
-  - 🇺🇸_US_美国_7
+  - 🇺🇸_US_美国_2
+  - 🇷🇺_RU_俄罗斯_1
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国->🇨🇳_CN_中国
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_6
+  - 🇩🇪_DE_德国->🇯🇵_JP_日本
+  - 🇫🇷_FR_法国->🇺🇸_US_美国
   - 🇺🇸_US_美国_8
+  - 🇷🇺_RU_俄罗斯_2
   - 🇺🇸_US_美国_9
   - 🇺🇸_US_美国_10
   - 🇺🇸_US_美国_11
   - 🇺🇸_US_美国_12
-  - 🇨🇳_CN_中国->🇺🇸_US_美国_1
   - 🇺🇸_US_美国_13
-  - 🇺🇸_US_美国_14
-  - 🇺🇸_US_美国_15
-  - 🇩🇪_DE_德国_1
-  - 🇺🇸_US_美国_16
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国_17
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国_18
-  - 🇺🇸_US_美国_19
-  - 🇺🇸_US_美国_20
-  - 🇺🇸_US_美国_21
-  - 🇺🇸_US_美国_22
-  - 🇺🇸_US_美国_23
+  - 🇮🇪_IE_爱尔兰
   type: select
 rule-providers:
   Apple:
