--- a/nodes/ndnode.yaml
+++ b/nodes/ndnode.yaml
@@ -1,477 +1,2 @@
-allow-lan: false
-dns:
-  default-nameserver:
-  - 223.5.5.5
-  - 114.114.114.114
-  enable: true
-  enhanced-mode: fake-ip
-  fake-ip-filter:
-  - '*.lan'
-  - '*.localdomain'
-  - '*.example'
-  - '*.invalid'
-  - '*.localhost'
-  - '*.test'
-  - '*.local'
-  - '*.home.arpa'
-  - router.asus.com
-  - localhost.sec.qq.com
-  - localhost.ptlogin2.qq.com
-  - +.msftconnecttest.com
-  fake-ip-range: 198.18.0.1/16
-  ipv6: false
-  listen: 0.0.0.0:53
-  nameserver:
-  - 223.5.5.5
-  - 114.114.114.114
-  - 119.29.29.29
-  - 180.76.76.76
-external-controller: 127.0.0.1:9999
-log-level: info
-mixed-port: 7890
-mode: rule
-proxies:
-- cipher: aes-256-cfb
-  name: 6元高速机场：cczzuu.top
-  password: UTJA57ypk2XKQpnm
-  port: 9033
-  server: 217.30.10.18
-  type: ss
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国
-  password: amazonskr05
-  port: 443
-  server: 44.244.24.140
-  type: ss
-- cipher: chacha20-ietf-poly1305
-  name: 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  password: 4a2rfixophdjffa8KVA4Aa
-  port: 8080
-  server: beesyar.org
-  type: ss
-- alterId: 64
-  cipher: auto
-  name: 🇨🇳_CN_中国->🇺🇸_US_美国
-  network: tcp
-  port: 58831
-  server: 120.232.153.27
-  type: vmess
-  uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_2
-  password: PCnnH6SQSnfoS27
-  port: 8090
-  server: 54.37.12.70
-  type: ss
-- alterId: 0
-  cipher: auto
-  fingerprint: ''
-  name: 🇷🇺_RU_俄罗斯_1
-  network: tcp
-  port: 8081
-  server: 194.87.31.160
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
-  uuid: a7e00c2f-411a-438f-9119-0f022a85a5e3
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_3
-  password: e4FCWrgpkji3QY
-  port: 9102
-  server: 38.110.1.105
-  type: ss
-- alterId: 64
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇳_CN_中国
-  network: tcp
-  port: 45017
-  server: 142.0.134.244
-  type: vmess
-  uuid: 418048af-a293-4b99-9b0c-98ca3580dd24
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_4
-  password: g5MeD6Ft3CWlJId
-  port: 5003
-  server: 142.202.48.105
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_6
-  password: Y6R9pAtvxxzmGC
-  port: 9090
-  server: 38.110.1.105
-  type: ss
-- cipher: chacha20-ietf-poly1305
-  name: 🇩🇪_DE_德国->🇯🇵_JP_日本
-  password: 4a2rfixophdjffa8KVA4Aa
-  port: 8080
-  server: 45.87.175.154
-  type: ss
-- name: 🇫🇷_FR_法国->🇺🇸_US_美国
-  password: telegram-id-directvpn
-  port: 22222
-  server: 15.237.235.15
-  skip-cert-verify: false
-  sni: trojan.burgerip.co.uk
-  type: trojan
-- alpn:
-  - http/1.1
-  name: 🇺🇸_US_美国_8
-  network: tcp
-  password: telegram-id-privatevpns
-  port: 22222
-  server: 13.61.76.115
-  sni: trojan.burgerip.co.uk
-  type: trojan
-- cipher: chacha20-ietf-poly1305
-  name: 🇷🇺_RU_俄罗斯_2
-  password: 3MgIhqwp4pjM8SKwixNkYZ
-  port: 33068
-  server: 193.124.22.253
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_9
-  password: pKEW8JPByTVTLtM
-  port: 443
-  server: 38.110.1.105
-  type: ss
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_10
-  password: amazonskr05
-  port: 443
-  server: 35.94.117.219
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_11
-  password: lGqs95QkFHo2NV
-  port: 5498
-  server: 38.110.1.105
-  type: ss
-- cipher: aes-256-cfb
-  name: 🇺🇸_US_美国_12
-  password: amazonskr05
-  port: 443
-  server: 35.91.205.11
-  type: ss
-- cipher: aes-256-gcm
-  name: 🇺🇸_US_美国_13
-  password: RexnBgU7EV5ADxG
-  port: 7001
-  server: 38.110.1.203
-  type: ss
-- alpn:
-  - http/1.1
-  name: 🇮🇪_IE_爱尔兰
-  network: tcp
-  password: telegram-id-privatevpns
-  port: 22222
-  server: 52.208.71.141
-  sni: trojan.burgerip.co.uk
-  type: trojan
-proxy-groups:
-- name: 🚀 节点选择
-  proxies:
-  - ♻️ 自动选择
-  - DIRECT
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_2
-  - 🇷🇺_RU_俄罗斯_1
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国->🇨🇳_CN_中国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_6
-  - 🇩🇪_DE_德国->🇯🇵_JP_日本
-  - 🇫🇷_FR_法国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇮🇪_IE_爱尔兰
-  type: select
-- interval: 300
-  name: ♻️ 自动选择
-  proxies:
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_2
-  - 🇷🇺_RU_俄罗斯_1
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国->🇨🇳_CN_中国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_6
-  - 🇩🇪_DE_德国->🇯🇵_JP_日本
-  - 🇫🇷_FR_法国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇮🇪_IE_爱尔兰
-  tolerance: 50
-  type: url-test
-  url: http://www.gstatic.com/generate_204
-- name: 🌍 国外媒体
-  proxies:
-  - 🚀 节点选择
-  - ♻️ 自动选择
-  - 🎯 全球直连
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_2
-  - 🇷🇺_RU_俄罗斯_1
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国->🇨🇳_CN_中国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_6
-  - 🇩🇪_DE_德国->🇯🇵_JP_日本
-  - 🇫🇷_FR_法国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇮🇪_IE_爱尔兰
-  type: select
-- name: 📲 电报信息
-  proxies:
-  - 🚀 节点选择
-  - 🎯 全球直连
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_2
-  - 🇷🇺_RU_俄罗斯_1
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国->🇨🇳_CN_中国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_6
-  - 🇩🇪_DE_德国->🇯🇵_JP_日本
-  - 🇫🇷_FR_法国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇮🇪_IE_爱尔兰
-  type: select
-- name: Ⓜ️ 微软服务
-  proxies:
-  - 🎯 全球直连
-  - 🚀 节点选择
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_2
-  - 🇷🇺_RU_俄罗斯_1
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国->🇨🇳_CN_中国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_6
-  - 🇩🇪_DE_德国->🇯🇵_JP_日本
-  - 🇫🇷_FR_法国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇮🇪_IE_爱尔兰
-  type: select
-- name: 🍎 苹果服务
-  proxies:
-  - 🚀 节点选择
-  - 🎯 全球直连
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_2
-  - 🇷🇺_RU_俄罗斯_1
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国->🇨🇳_CN_中国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_6
-  - 🇩🇪_DE_德国->🇯🇵_JP_日本
-  - 🇫🇷_FR_法国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇮🇪_IE_爱尔兰
-  type: select
-- name: 🎯 全球直连
-  proxies:
-  - DIRECT
-  - 🚀 节点选择
-  - ♻️ 自动选择
-  type: select
-- name: 🛑 全球拦截
-  proxies:
-  - REJECT
-  - DIRECT
-  type: select
-- name: 🍃 应用净化
-  proxies:
-  - REJECT
-  - DIRECT
-  type: select
-- name: 🐟 漏网之鱼
-  proxies:
-  - 🚀 节点选择
-  - 🎯 全球直连
-  - ♻️ 自动选择
-  - 🇷🇺_RU_俄罗斯
-  - 🇺🇸_US_美国
-  - 🇩🇪_DE_德国->🇮🇪_IE_爱尔兰
-  - 🇨🇳_CN_中国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_2
-  - 🇷🇺_RU_俄罗斯_1
-  - 🇺🇸_US_美国_3
-  - 🇺🇸_US_美国->🇨🇳_CN_中国
-  - 🇺🇸_US_美国_4
-  - 🇺🇸_US_美国_6
-  - 🇩🇪_DE_德国->🇯🇵_JP_日本
-  - 🇫🇷_FR_法国->🇺🇸_US_美国
-  - 🇺🇸_US_美国_8
-  - 🇷🇺_RU_俄罗斯_2
-  - 🇺🇸_US_美国_9
-  - 🇺🇸_US_美国_10
-  - 🇺🇸_US_美国_11
-  - 🇺🇸_US_美国_12
-  - 🇺🇸_US_美国_13
-  - 🇮🇪_IE_爱尔兰
-  type: select
-rule-providers:
-  Apple:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/Apple.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Apple.list
-  BanAD:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/BanAD.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-  BanProgramAD:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/BanProgramAD.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
-  ChinaCompanyIp:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/ChinaCompanyIp.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-  ChinaDomain:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/ChinaDomain.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
-  GoogleCN:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/GoogleCN.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
-  LocalAreaNetwork:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/LocalAreaNetwork.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
-  Microsoft:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/Microsoft.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Microsoft.list
-  ProxyLite:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/ProxyLite.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
-  ProxyMedia:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/ProxyMedia.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
-  SteamCN:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/SteamCN.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-  Telegram:
-    behavior: classical
-    format: text
-    interval: 3600
-    path: ./Clash/Telegram.list
-    type: http
-    url: https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-rules:
-- RULE-SET,LocalAreaNetwork,🎯 全球直连
-- RULE-SET,BanAD,🛑 全球拦截
-- RULE-SET,BanProgramAD,🍃 应用净化
-- RULE-SET,GoogleCN,🎯 全球直连
-- RULE-SET,SteamCN,🎯 全球直连
-- RULE-SET,Microsoft,Ⓜ️ 微软服务
-- RULE-SET,Apple,🍎 苹果服务
-- RULE-SET,ProxyMedia,🌍 国外媒体
-- RULE-SET,Telegram,📲 电报信息
-- RULE-SET,ProxyLite,🚀 节点选择
-- RULE-SET,ChinaDomain,🎯 全球直连
-- RULE-SET,ChinaCompanyIp,🎯 全球直连
-- GEOIP,CN,🎯 全球直连
-- MATCH,🐟 漏网之鱼
-tun:
-  auto-detect-interface: true
-  auto-route: true
-  dns-hijack:
-  - 114.114.114.114
-  - 180.76.76.76
-  - 119.29.29.29
-  - 223.5.5.5
-  - 8.8.8.8
-  - 8.8.4.4
-  - 1.1.1.1
-  - 1.0.0.1
-  enable: true
+null
+...
