--- a/nodes/v2rayshare.yaml
+++ b/nodes/v2rayshare.yaml
@@ -32,265 +32,123 @@ log-level: info
 mixed-port: 7890
 mode: rule
 proxies:
-- alterId: 0
-  cipher: auto
-  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  network: ws
-  port: 2082
-  server: 190.93.246.120
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇰🇷_KR_韩国
+  password: amazonskr05
+  port: 443
+  server: 34.216.74.178
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  network: ws
-  port: 2082
-  server: 154.83.2.121
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇯🇵_JP_日本
+  password: amazonskr05
+  port: 443
+  server: 18.177.142.239
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  network: ws
-  port: 2082
-  server: 190.93.247.23
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_1
+  password: amazonskr05
+  port: 443
+  server: 52.12.67.119
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  network: ws
-  port: 2082
-  server: 190.93.245.168
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  password: amazonskr05
+  port: 443
+  server: 18.236.89.178
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  network: ws
-  port: 2082
-  server: 190.93.247.221
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
+- cipher: aes-256-gcm
+  name: 🇺🇸_US_美国_2
+  password: RexnBgU7EV5ADxG
+  port: 7002
+  server: 38.110.1.3
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  network: ws
-  port: 2082
-  server: 190.93.245.174
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国->🇯🇵_JP_日本
+  password: amazonskr05
+  port: 443
+  server: 34.215.84.62
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  network: ws
-  port: 2082
-  server: 190.93.247.170
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_3
+  password: amazonskr05
+  port: 443
+  server: 54.189.131.201
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  network: ws
-  port: 2082
-  server: 168.100.6.46
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_4
+  password: amazonskr05
+  port: 443
+  server: 34.222.145.191
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  network: ws
-  port: 2082
-  server: 89.117.112.181
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇺🇸_US_美国_5
+  password: amazonskr05
+  port: 443
+  server: 18.236.180.126
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  network: ws
-  port: 2082
-  server: 185.148.107.11
-  type: vmess
+- cipher: aes-128-gcm
+  name: 🇧🇬_BG_保加利亚
+  password: shadowsocks
+  port: 443
+  server: 149.34.244.82
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  network: ws
-  port: 2082
-  server: 190.93.245.76
-  skip-cert-verify: true
-  sni: ''
-  type: vmess
+- cipher: chacha20-ietf-poly1305
+  name: 🇺🇸_US_美国_6
+  password: 5cp9Z3iWnJZ2
+  port: 443
+  server: 205.134.180.150
+  type: ss
   udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国
-  network: ws
-  port: 8880
-  server: 104.18.114.56
-  type: vmess
+- cipher: aes-256-cfb
+  name: 🇸🇬_SG_新加坡->🇺🇸_US_美国
+  password: amazonskr05
+  port: 443
+  server: 18.143.178.37
+  type: ss
   udp: true
-  uuid: 90f8f4dc-8092-4355-9047-05f506f5e9ab
-  ws-opts:
-    headers:
-      host: m1.106778.xyz
-    path: github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  network: ws
-  port: 2082
-  server: 170.114.46.219
-  type: vmess
-  udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇳🇱_NL_荷兰
-  network: ws
-  port: 2082
-  server: 45.131.208.116
-  type: vmess
-  udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  network: ws
-  port: 2082
-  server: 190.93.244.64
-  type: vmess
-  udp: true
-  uuid: 5f3f09ad-89cb-4e94-a7ad-aa8239913555
-  ws-opts:
-    headers:
-      host: ip18.6929198.xyz
-    path: /github.com/Alvin9999
-- alterId: 0
-  cipher: auto
-  name: 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
-  network: ws
-  port: 2086
-  server: 104.21.238.163
-  type: vmess
-  udp: true
-  uuid: bc65fac2-7dc7-426f-acdd-0779a5035bde
-  ws-opts:
-    headers:
-      host: p1.613055.xyz
-    path: github.com/Alvin9999
 proxy-groups:
 - name: 🚀 节点选择
   proxies:
   - ♻️ 自动选择
   - DIRECT
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  - 🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  - 🇳🇱_NL_荷兰
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  - 🇺🇸_US_美国->🇰🇷_KR_韩国
+  - 🇯🇵_JP_日本
+  - 🇺🇸_US_美国_1
+  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  - 🇺🇸_US_美国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚
+  - 🇺🇸_US_美国_6
+  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
   type: select
 - interval: 300
   name: ♻️ 自动选择
   proxies:
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  - 🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  - 🇳🇱_NL_荷兰
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  - 🇺🇸_US_美国->🇰🇷_KR_韩国
+  - 🇯🇵_JP_日本
+  - 🇺🇸_US_美国_1
+  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  - 🇺🇸_US_美国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚
+  - 🇺🇸_US_美国_6
+  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
   tolerance: 50
   type: url-test
   url: http://www.gstatic.com/generate_204
@@ -299,85 +157,69 @@ proxy-groups:
   - 🚀 节点选择
   - ♻️ 自动选择
   - 🎯 全球直连
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  - 🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  - 🇳🇱_NL_荷兰
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  - 🇺🇸_US_美国->🇰🇷_KR_韩国
+  - 🇯🇵_JP_日本
+  - 🇺🇸_US_美国_1
+  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  - 🇺🇸_US_美国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚
+  - 🇺🇸_US_美国_6
+  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
   type: select
 - name: 📲 电报信息
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  - 🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  - 🇳🇱_NL_荷兰
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  - 🇺🇸_US_美国->🇰🇷_KR_韩国
+  - 🇯🇵_JP_日本
+  - 🇺🇸_US_美国_1
+  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  - 🇺🇸_US_美国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚
+  - 🇺🇸_US_美国_6
+  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
   type: select
 - name: Ⓜ️ 微软服务
   proxies:
   - 🎯 全球直连
   - 🚀 节点选择
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  - 🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  - 🇳🇱_NL_荷兰
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  - 🇺🇸_US_美国->🇰🇷_KR_韩国
+  - 🇯🇵_JP_日本
+  - 🇺🇸_US_美国_1
+  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  - 🇺🇸_US_美国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚
+  - 🇺🇸_US_美国_6
+  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
   type: select
 - name: 🍎 苹果服务
   proxies:
   - 🚀 节点选择
   - 🎯 全球直连
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  - 🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  - 🇳🇱_NL_荷兰
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  - 🇺🇸_US_美国->🇰🇷_KR_韩国
+  - 🇯🇵_JP_日本
+  - 🇺🇸_US_美国_1
+  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  - 🇺🇸_US_美国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚
+  - 🇺🇸_US_美国_6
+  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
   type: select
 - name: 🎯 全球直连
   proxies:
@@ -400,22 +242,18 @@ proxy-groups:
   - 🚀 节点选择
   - 🎯 全球直连
   - ♻️ 自动选择
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_1
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_1
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_2
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_3
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_3
-  - 🇨🇷_CR_哥斯达黎加->🇨🇦_CA_加拿大_4
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_4
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_1
-  - 🇱🇹_LT_立陶宛->🇨🇦_CA_加拿大_2
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_5
-  - 🇺🇸_US_美国
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_6
-  - 🇳🇱_NL_荷兰
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_7
-  - 🇺🇸_US_美国->🇨🇦_CA_加拿大_8
+  - 🇺🇸_US_美国->🇰🇷_KR_韩国
+  - 🇯🇵_JP_日本
+  - 🇺🇸_US_美国_1
+  - 🇺🇸_US_美国->🇸🇬_SG_新加坡
+  - 🇺🇸_US_美国_2
+  - 🇺🇸_US_美国->🇯🇵_JP_日本
+  - 🇺🇸_US_美国_3
+  - 🇺🇸_US_美国_4
+  - 🇺🇸_US_美国_5
+  - 🇧🇬_BG_保加利亚
+  - 🇺🇸_US_美国_6
+  - 🇸🇬_SG_新加坡->🇺🇸_US_美国
   type: select
 rules:
 - DOMAIN-SUFFIX,acl4.ssr,🎯 全球直连
